fixed a few layout issues on lower resolutions + added working specs nav

--- a/NuGet.Docs/css/nuget.docs.css
+++ b/NuGet.Docs/css/nuget.docs.css
@@ -197,11 +197,7 @@ aside#toc{
     body {
         width: 1200px;
     }
-
-    .content section {
-        padding-top: 20px;
-    }
-
+    
     article.box header {
         padding: 18px 20px 24px 20px;
     }
@@ -225,7 +221,8 @@ aside#toc{
     }
 
     aside#toc h2 {
-        margin: 0px 20px 20px 20px;
+        margin: 0 20px 20px 20px;
+        padding: 0;
     }
 
     aside#toc h3 {
